fix dark mode

--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -26,7 +26,8 @@
     --radius: 0.3rem;
   }
 
-  .dark {
+  .dark,
+  :root[class~="dark"] {
     --background: 224 71.4% 4.1%;
     --foreground: 210 20% 98%;
     --card: 224 71.4% 4.1%;
